week-6/modules/networking/main.tf
/*==== The VPC ======*/

resource "aws_vpc" "vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name        = "${var.environment}-vpc"
    Environment = var.environment
  }
}

/*==== Subnets ======*/

/* Internet gateway for the public subnet */
resource "aws_internet_gateway" "ig" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name        = "${var.environment}-igw"
    Environment = var.environment
  }
}

# module "nat" {
#   source = "int128/nat-instance/aws"

#   name                        = "main"
#   vpc_id                      = aws_vpc.vpc.id
#   public_subnet               = element(aws_subnet.public_subnet.*.id, 0)
#   private_subnets_cidr_blocks = var.private_subnets_cidr
#   private_route_table_ids     = aws_route_table.private.*.id
# }

# # /* Elastic IP for NAT */
# resource "aws_eip" "nat" {
#   network_interface = module.nat.eni_id
#   tags = {
#     "Name" = "nat-instance-main"
#   }
# }

// aws --region eu-west-1 ec2 describe-images --owners amazon --filters Name="name",Values="amzn-ami-vpc-nat*"
data "aws_ami" "nat" {
  most_recent = true

  filter {
    name   = "name"
    values = ["amzn-ami-vpc-nat*"]
  }

  owners = ["amazon"]
}

resource "aws_instance" "NAT_Instance" {
  # ami           = "ami-0b840e8a1ce4cdf15"
  ami           = data.aws_ami.nat.id

  key_name      = var.key_name
  instance_type = "t2.micro"
  subnet_id     = aws_subnet.public_subnet.id
  associate_public_ip_address = true
  source_dest_check           = false
  vpc_security_group_ids      = [aws_security_group.access_via_nat.id]

  tags = {
    Name = "NAT"
  }
}

# # allow internet access to Application nodes through nat #1
# resource "aws_route_table" "route_table_nat" {
#   vpc_id = aws_vpc.vpc.id

#   route {
#     cidr_block  = "0.0.0.0/0"
#     instance_id = aws_instance.NAT_Instance.id

#   }
# }
# resource "aws_route_table_association" "subnet_to_nat_instance" {
#   route_table_id = aws_route_table.route_table_nat.id

#   subnet_id      = aws_subnet.private_subnet.id

# }




/* Public subnet */
resource "aws_subnet" "public_subnet" {
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = element(var.public_subnets_cidr, 0)
  availability_zone       = element(var.availability_zones, 0)
  map_public_ip_on_launch = true
}

/* Private subnet */
resource "aws_subnet" "private_subnet" {
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = element(var.private_subnets_cidr, 0)

  availability_zone       = element(var.availability_zones, 1)
  map_public_ip_on_launch = false
}

/* Routing table for private subnet */
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block  = "0.0.0.0/0"
    instance_id = aws_instance.NAT_Instance.id

  }

  tags = {
    Name        = "${var.environment}-private-route-table"
    Environment = var.environment
  }
}

/* Routing table for public subnet */
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name        = "${var.environment}-public-route-table"
    Environment = var.environment
  }
}

resource "aws_route" "public_internet_gateway" {
  route_table_id         = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.ig.id
}

/* Route table associations */
resource "aws_route_table_association" "public" {
  count          = length(var.public_subnets_cidr)
  subnet_id      = element(aws_subnet.public_subnet.*.id, count.index)
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private" {
  count          = length(var.private_subnets_cidr)
  subnet_id      = element(aws_subnet.private_subnet.*.id, count.index)
  route_table_id = aws_route_table.private.id
}

resource "aws_security_group" "access_via_nat" {
  name = "Access to nat instance"
  description = "Access to internet via nat instance for private nodes"
  vpc_id = aws_vpc.vpc.id

  # outbound internet access
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group_rule" "allow_inbound_traffic" {
  type = "ingress"
  from_port = 0
  to_port = 65535
  protocol = "all"
  cidr_blocks = var.private_subnets_cidr
  
  security_group_id = aws_security_group.access_via_nat.id

}
